force-app/main/default/objects/Cuenta_corriente__c/Cuenta_corriente__c.object-meta.xml
<CustomObject>
    <label>Cuenta corriente</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Número de cuenta corriente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cuentas corrientes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>