force-app/main/default/objects/Cuenta_corriente__c/fields/Clase__c.field-meta.xml
<CustomField>
    <fullName>Clase__c</fullName>
    <label>Clase</label>
    <length>2</length>
    <type>Text</type>
</CustomField>