force-app/main/default/objects/Cuenta_corriente__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Dirección</label>
    <length>100</length>
    <type>Text</type>
</CustomField>