force-app/main/default/objects/Cuenta_corriente__c/fields/Fecha_transaccion2__c.field-meta.xml
<CustomField>
    <fullName>Fecha_transaccion2__c</fullName>
    <label>Fecha transacción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>