force-app/main/default/objects/Cuenta_corriente__c/fields/Fecha_transaccion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_transaccion__c</fullName>
    <label>Fecha transacción</label>
    <type>Date</type>
</CustomField>