force-app/main/default/objects/Cuenta_corriente__c/fields/Fecha_vencimiento2__c.field-meta.xml
<CustomField>
    <fullName>Fecha_vencimiento2__c</fullName>
    <label>Fecha vencimiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>