force-app/main/default/objects/Cuenta_corriente__c/fields/Id_externo__c.field-meta.xml
<CustomField>
    <fullName>Id_externo__c</fullName>
    <externalId>true</externalId>
    <label>Id externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>