force-app/main/default/objects/Cuenta_corriente__c/fields/Monto_ajustado__c.field-meta.xml
<CustomField>
    <fullName>Monto_ajustado__c</fullName>
    <label>Monto ajustado</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>