force-app/main/default/objects/Cuenta_corriente__c/fields/Monto_Documento__c.field-meta.xml
<CustomField>
    <fullName>Monto_Documento__c</fullName>
    <label>Monto Documento</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>