force-app/main/default/objects/Cuenta_corriente__c/fields/Nombre_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_cliente__c</fullName>
    <label>Nombre del cliente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>