force-app/main/default/objects/Cuenta_corriente__c/fields/Numero_de_cliente__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_cliente__c</fullName>
    <label>Número de cliente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>