force-app/main/default/objects/Cuenta_corriente__c/fields/Numero_de_transaccion__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_transaccion__c</fullName>
    <label>Número de transacción</label>
    <length>15</length>
    <type>Text</type>
</CustomField>