force-app/main/default/objects/Cuenta_corriente__c/fields/Sucursal_2__c.field-meta.xml
<CustomField>
    <fullName>Sucursal_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sucursal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas corrientes (Sucursal)</relationshipLabel>
    <relationshipName>Cuentas_corrientes1</relationshipName>
    <type>Lookup</type>
</CustomField>