force-app/main/default/objects/Cuenta_corriente__c/fields/Sucursal__c.field-meta.xml
<CustomField>
    <fullName>Sucursal__c</fullName>
    <label>Sucursal</label>
    <length>30</length>
    <type>Text</type>
</CustomField>