force-app/main/default/objects/Cuenta_corriente__c/fields/Termino_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Termino_de_pago__c</fullName>
    <label>Termino de pago</label>
    <length>15</length>
    <type>Text</type>
</CustomField>